--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "side-project-palakjn",
   "version": "1.0.0",
   "description": "This website enables photographers to share photographs with user and enable users to select photos which they like and want in an album",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
-    "mongoose": "^5.3.6"
+    "mongoose": "^5.3.6",
+    "nodemon": "^2.0.15"
   }
 }
