--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "homepage": "https://github.com/CS601-F21/side-project-palakjn#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.2",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
+    "mongoose-findorcreate": "^3.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
