--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/CS601-F21/side-project-palakjn#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.0.0",
+    "@types/dotenv": "^4.0.3",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
     "mongoose-findorcreate": "^3.0.0",
@@ -29,6 +33,8 @@
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   }
 }
