--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
