--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.2",
-    "formidable": "^2.0.1",
+    "multer": "^1.4.3",
     "fs": "0.0.1-security",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
