--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
   "dependencies": {
     "@azure/storage-blob": "^12.0.0",
     "@types/dotenv": "^4.0.3",
+    "adm-zip": "^0.5.9",
     "body-parser": "^1.18.3",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.17.2",
-    "multer": "^1.4.3",
     "fs": "0.0.1-security",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.6",
     "mongoose-findorcreate": "^3.0.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
